slowed down horizontal scroll

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 
 		.horizontal {
 		  height: 100vh;
-		  width: 3600px;
 		}
 
 		.header-section {
@@ -152,8 +151,9 @@
 		gsap.timeline({
 			scrollTrigger: {
 				trigger: '.projects',
-				scrub: 1,
+				scrub: 0.5,
 				start: 'top top',
+				end: '500%',
 				pin: '.horizontal'
 			}
 		}).to('.projects', {
@@ -164,7 +164,7 @@
 		gsap.timeline({
 			scrollTrigger: {
 				trigger: '.article',
-				scrub: 1,
+				scrub: 0.5,
 				start: 'top top',
 				pin: '.vertical',
 			}
@@ -176,7 +176,7 @@
 		gsap.timeline({
 			scrollTrigger: {
 				trigger: '.black',
-				scrub: true,
+				scrub: 0.5,
 				start: 'top top',
 				end: '100%',
 				pin: '.black',
